# football-data

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: .markdownlint.jsonc  getting-started.md  index.md  project-structure.md
docs/api/: data.md  evaluation.md  features.md  models.md  tuning.md
docs/concepts/: dixon-coles-correction.md  expected-points-optimization.md  odds-to-probabilities.md  poisson-lambdas.md  scoring-rules.md  season-walk-forward-validation.md
docs/guides/: 01-loading-data.md  02-building-features.md  03-training-poisson-dc.md  04-training-xgboost.md  05-evaluating-predictions.md  06-grid-search-and-tuning.md  07-pit-diagnostics-interpretation.md  08-pearson-chi2-diagnostics.md
docs/reports/: poisson-dixon-coles-baseline.md
notebooks/exploration/: 01_xgboost_poisson_prototype.py  02_GAM_Lab.py  03_Dixon_Coles_Poisson_Lab.py  04_PIT_Diagnostics_Simulation_Lab.py  05_Pearson_Chi2_Diagnostics_Lab.py  06_Monte_Carlo_Scoring_Rules_Lab.py
notebooks/features_lab/: 01_Feature_Lab_Baseline.py
notebooks/reports/: poisson_dixon_coles_baseline.py
outputs/reports/: poisson_dixon_coles_baseline.html
overrides/components/: sidebar_item.html
overrides/templates/: bottom_navigation.html  header.html  page.html
scripts/: generate_grid_search_1d_figure.py  manual_retry_matches.py  retry_failed_matches.py  scrape_seasons_batch.py  scrape_upcoming_matches.py
src/: __init__.py
src/data/: __init__.py  io.py  odds_features.py  prepare_matches.py
src/features/: __init__.py  odds_probabilities.py  poisson_priors.py
src/models/: __init__.py  interfaces.py
src/models/components/: __init__.py  matrix_builders.py  optimizers.py
src/models/evaluation/: __init__.py  pearson_chi2.py  (+3 more)
tests/: test_poisson_dixon_coles_model.py  test_predictive_nll_grid_search.py  test_time_splits_and_grid_search.py
(+9 files in other folders)
