[project]
name = "football-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "auto-mix-prep>=0.2.0",
    "certifi>=2026.1.4",
    "lxml>=6.0.2",
    "marimo[mcp]>=0.22.0",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "soccerdata>=1.8.8",
]

[tool.marimo.runtime]
pythonpath = ["."]
