[project]
name = "football-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "auto-mix-prep>=0.2.0",
    "certifi>=2026.1.4",
    "lxml>=6.0.2",
    "marimo[mcp]>=0.22.0",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "pygam>=0.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "soccerdata>=1.8.8",
    "torch>=2.12.0",
    "xgboost>=3.2.0",
]

[tool.marimo.runtime]
pythonpath = ["."]

[tool.uv]
override-dependencies = [
    "numpy>=2.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-shadcn>=0.10.4",
    "mkdocstrings[python]>=1.0.4",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.20.1",
    "ruff>=0.15.11",
]
